2016-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnshimbun.el: Add an advice to gnus-backlog-shutdown.

2016-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't use `string-as-unibyte' that is obsolete in Emacs 25.2.
	Use `string-make-unibyte' instead.

	* mew-shimbun.el (mew-shimbun-md5):
	* nnshimbun.el (gnus-group-make-shimbun-group): Do.

2016-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents):
	Improve the way to find the article end.

2016-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-nikkangendai-get-headers-top): Work.

2016-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-multi-clear-contents): Fix regexp.

2016-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-clear-contents): Make it work.

2016-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-clear-contents): Remove garbage.

2015-12-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-clear-contents):
	Emergency fix to regexp to search article body.

2015-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yoshirin.el (shimbun-yoshirin-x-face-alist): Add a face.

2015-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-clear-contents): Remove;
	merge to shimbun-multi-clear-contents.
	(shimbun-multi-clear-contents): Improve regexp to search img tag;
	add author's info and subtitle if any.

2015-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-nikkangendai-get-headers-top)
	(shimbun-nikkangendai-get-headers, shimbun-multi-next-url)
	(shimbun-clear-contents): Rewrite following the site renewal.

2015-11-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-clear-contents): Fix image gathering.

2015-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el (shimbun-clear-contents):
	Don't exclude article head.

2015-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>
