@@ -416,6 +416,20 @@ If FULL-NAME-P is non-nil, it assumes that GROUP is a full name."
 			      (cons (list 'nnshimbun-shimbun shimbun) defs))
 	  t))))
 
+(eval-and-compile
+  (require 'advice)
+
+  (defadvice gnus-backlog-shutdown (after do-it-for-nnshimbun-as-well activate)
+    "Do it for nnshimbun as well."
+    (ad-with-originals (gnus-backlog-shutdown)
+      (nnshimbun-backlog (gnus-backlog-shutdown)))
+    (dolist (buffer (buffer-list))
+      (when (string-match "\\` \\*nnshimbun backlog " (buffer-name buffer))
+	(kill-buffer buffer))))
+
+  (defalias 'nnshimbun-unadvised-gnus-backlog-shutdown
+    (ad-get-orig-definition 'gnus-backlog-shutdown)))
+
 (deffoo nnshimbun-close-server (&optional server)
   (when (nnshimbun-server-opened server)
     (when nnshimbun-shimbun
@@ -423,7 +437,7 @@ If FULL-NAME-P is non-nil, it assumes that GROUP is a full name."
 	(when (buffer-live-p (nnshimbun-nov-buffer-name group))
 	  (nnshimbun-write-nov group t)))
       (shimbun-close nnshimbun-shimbun)))
-  (nnshimbun-backlog (gnus-backlog-shutdown))
+  (nnshimbun-backlog (nnshimbun-unadvised-gnus-backlog-shutdown))
   (nnoo-close-server 'nnshimbun server)
   t)
 
@@ -1027,14 +1041,6 @@ puts a '&' after each w3m command."
 	    (insert
 	     (concat "$W3M $OPTS " (shell-quote-argument url) " > " fname
 		     (if async " &\n" "\n")))))))))
-
-(defadvice gnus-backlog-shutdown (after do-it-for-nnshimbun-as-well activate)
-  "Do it for nnshimbun as well."
-  (ad-with-originals (gnus-backlog-shutdown)
-    (nnshimbun-backlog (gnus-backlog-shutdown)))
-  (dolist (buffer (buffer-list))
-    (when (string-match "\\` \\*nnshimbun backlog " (buffer-name buffer))
-      (kill-buffer buffer))))
 
 (provide 'nnshimbun)
 
