@@ -1,6 +1,7 @@
 2016-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* nnshimbun.el: Add an advice to gnus-backlog-shutdown.
+	(nnshimbun-close-server): Use unadvised gnus-backlog-shutdown.
 
 2016-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
